tests/paczka1/fuzzy1/51591608.err
Error in line 2: XaYrfzikY A591 66,10
Error in line 7: XaYrfzikY A593 48,2
Error in line 17: IZ3 A591 97,2
Error in line 13: XaYrfzikY A591 145,1
Error in line 22: S87 S87 36,4
Error in line 19: IZ3 S290 75,8
